<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">WalkTheDog</string>
    <string name="confirm">確定</string>
    <string name="cancle">取消</string>
    <string name="back">返回</string>
    <string name="successful">成功</string>
    <string name="unknown_error">未知錯誤</string>
    <string name="operation_successful">操作成功</string>
    <string name="enter">確認</string>
    <string name="password_error">密碼錯誤，請重新輸入</string>
    <string name="loading_notice">Please wait a moment…</string>
    <string name="english">英文</string>
    <string name="japanese">日文</string>
    <string name="chinese">中文</string>
    <string name="kg">Kg</string>
    <string name="g">%sg</string>
    <string name="login_tip_1">首先創建或者導入一個\賬號.通過12個助記詞掌管和回復您\n的資產,12個助記詞一旦丟失，您的資產將無法\n找回</string>
    <string name="login_tip_2">
        >不要輕易卸載\n>不要清除應用數據\n>正確抄寫12個助記詞\n>秘密保管助記詞
    </string>
    <string name="create_account">創建賬號</string>
    <string name="import_account">導入賬號</string>
    <string name="login_tip_3">我已閱讀並同意 </string>
    <string name="login_tip_4">平台協議</string>
    <string name="mailbox_title">郵箱登錄</string>
    <string name="mailbox_address">請輸入郵箱地址</string>
    <string name="mailbox_address_notice">請輸入正確的郵箱地址</string>
    <string name="login_type">登录方式</string>
    <string name="password_login">密碼登录</string>
    <string name="mail_code_login">驗證碼登錄</string>
    <string name="mailbox_code">郵箱驗證</string>
    <string name="mailbox_send_error">驗證碼發送失敗</string>
    <string name="mailbox_send_succeed">驗證碼已發送</string>
    <string name="mailbox_code_error">驗證碼錯誤</string>
    <string name="mailbox_resend">重新發送</string>
    <string name="sign_up">註冊</string>
    <string name="sign_in">登錄</string>
    <string name="mailbox_sign_up">郵箱註冊</string>
    <string name="mailbox_code_notice">發送到郵箱%s發送短信請輸入郵箱驗證碼</string>
    <string name="mailbox_code_notice_2">>請輸入驗證碼</string>
    <string name="invitation_code_title">輸入邀請碼</string>
    <string name="invitation_code_notice">請輸入邀請碼</string>
    <string name="import_mnemonic">導入 \n助記詞</string>
    <string name="import_mnemonic_hint">輸入助記詞，用空格分隔</string>
    <string name="confirm_import">確認導入</string>
    <string name="wait_import">導入中, 請稍等…</string>
    <string name="error_import">助記詞輸入錯誤…</string>
    <string name="dialog_error_import">助記詞不存在, 請 \n檢查後再導入</string>
    <string name="setting_password_warning">任何向你詢問助記詞\n或者網站的都是騙子. 所有的QQ, Telegram \n群都是假群</string>
    <string name="enter_the_password">設置您的密碼</string>
    <string name="enter_your_password">再次輸入您的密碼</string>
    <string name="enter_password">輸入密碼</string>
    <string name="match_password">您輸入的密碼不匹配. 請重新輸入</string>
    <string name="match_password_error">密碼為6位純字母或字母+數字</string>
    <string name="match_invited_error">邀請碼錯誤</string>
    <string name="match_mailbox_error">該郵箱已註冊</string>
    <string name="creat_mnemonic_1">請務必</string>
    <string name="creat_mnemonic_2">正確抄寫12個\n助記詞</string>
    <string name="creat_mnemonic_3">*禁止截屏\n\n\n助記詞是恢復您資產的唯一途徑</string>
    <string name="creat_mnemonic_4">一旦丟失，資產將無法找回</string>
    <string name="creat_mnemonic_5">我已抄好. 去驗證</string>
    <string name="skip_mnemonic">以後抄，跳過 (不建議)</string>
    <string name="verify_title">無法回復賬戶</string>
    <string name="verify_content">請務必驗證一遍確保 \n助記詞正確</string>
    <string name="verify_again">在此驗證</string>
    <string name="next">下一步</string>
    <string name="verify_title_1">您已經抄寫好助記詞了嗎?</string>
    <string name="verify_title_2">請輸入一遍!</string>
    <string name="home">主頁</string>
    <string name="null_dog">還沒有狗狗</string>
    <string name="start_add_dog">開始添加你的狗狗</string>
    <string name="add_dog">添加狗狗</string>
    <string name="walking">walking</string>
    <string name="speed">速度: %s</string>
    <string name="number">次數: %s</string>
    <string name="number_today">今日次數: %s</string>
    <string name="number_totle" formatted="false">總次數: %s</string>
    <string name="trip">里程: %s</string>
    <string name="trip_totle">總里程: %s</string>
    <string name="time_totle">總時間: %s</string>
    <string name="more_operation">更多操作</string>
    <string name="feeding">餵食</string>
    <string name="train">訓練</string>
    <string name="replace_dog">更換狗狗</string>
    <string name="mail">商城</string>
    <string name="mail_dog">狗狗商城</string>
    <string name="mail_prop">道具商城</string>
    <string name="low_price">低價格</string>
    <string name="high_price">高價格</string>
    <string name="select_variety">選擇品種</string>
    <string name="fee_">手續費：</string>
    <string name="cancle_sale">取消售賣</string>
    <string name="buy_success">購買成功</string>
    <string name="rental">租賃</string>
    <string name="mine">我的</string>
    <string name="name_">姓名:</string>
    <string name="name">名稱</string>
    <string name="country">國家</string>
    <string name="name1_">名稱:</string>
    <string name="gender_">性別:</string>
    <string name="level_">等級:</string>
    <string name="weight_">體重:</string>
    <string name="muscle_">肌肉:</string>
    <string name="personality_">個性:</string>
    <string name="id_">編號:</string>
    <string name="id">編號</string>
    <string name="dog_walk_time_">遛狗時間:</string>
    <string name="charm_value_">魅力值:</string>
    <string name="time_">時間:</string>
    <string name="time_s">時間: %s</string>
    <string name="get_a_dog_">獲得的狗狗:</string>
    <string name="dog_owner">狗狗主人:</string>
    <string name="identity_information">身份信息</string>
    <string name="male">雄</string>
    <string name="female">雌</string>
    <string name="walk_title">遛狗</string>
    <string name="gps_week">GPS信號弱</string>
    <string name="gps">GPS</string>
    <string name="walk_notice_1">散步越遠，獲得\n的獎勵越多喲</string>
    <string name="found_s">找到%s</string>
    <string name="walk_stop">停止遛狗</string>
    <string name="walk_start">开始遛狗</string>
    <string name="walk_start_notice">是否停止遛狗</string>
    <string name="walk_notice_2">你進入了[未知區域]，得到道具概率將會增加</string>
    <string name="collect">收藏</string>
    <string name="collect_notice">道具已经收集並且\n放在我的道具里了</string>
    <string name="speed_up">需加速</string>
    <string name="speed_down">需减速</string>
    <string name="stop_count">后停止计数</string>
    <string name="walk_notice_3">慢下来!快走，否则爱犬找不到宝物，没有收入哦</string>
    <string name="walk_number">遛狗次數</string>
    <string name="walk_number_">今日遛狗次數:</string>
    <string name="individual_total_">個人遛狗總計:</string>
    <string name="number_total_">一起遛狗總計:</string>
    <string name="walk_notice_4">每隻狗狗，每天可以遛2次；次用用完了，就需要等到下一天才能遛狗</string>
    <string name="notification_title">正在遛狗。。。</string>
    <string name="notification_content">正在遛狗。。。</string>
    <string name="hungry_notice">您的狗狗<font color='#548FEB'>餓了</font>，去餵食吧；保證狗狗<font color='#548FEB'>精力充沛</font>才能一起遛狗哦</string>
    <string name="consumption_food">消耗的食物</string>
    <string name="surplus_food">剩餘的食物</string>
    <string name="feeding_su">餵食成功，狗狗盡力充沛</string>
    <string name="feeding_error">食物不足，去商場購買吧</string>
    <string name="buy_to_food">購買狗糧</string>
    <string name="buy">購買</string>
    <string name="cancle_buy">取消購買</string>
    <string name="pay">支付</string>
    <string name="lack_food">食物不足</string>
    <string name="gain_weight">獲得體重</string>
    <string name="balance_">餘額：</string>
    <string name="weight2_">重量：</string>
    <string name="weight2">重量</string>
    <string name="unite_price_">單價：</string>
    <string name="unite_price">單價</string>
    <string name="food_info_1">對抗飢餓</string>
    <string name="food_info_2">補充精力</string>
    <string name="my_dog">我的狗狗</string>
    <string name="rental_dog">租賃的狗狗</string>
    <string name="open">打開</string>
    <string name="select">選擇</string>
    <string name="deselect">取消選擇</string>
    <string name="choose_select">選擇成功</string>
    <string name="_time">%s 次</string>
    <string name="nothing">裝備狗狗: 无</string>
    <string name="equipment_dog_">裝備狗狗: %s</string>
    <string name="release_dog">解除狗狗</string>
    <string name="release_dog_notice">狗狗出售時需要解除選擇</string>
    <string name="sell_dog">出售狗狗</string>
    <string name="training_dog">訓練狗狗</string>
    <string name="sit_down">坐下</string>
    <string name="lay_down">躺下</string>
    <string name="come_to_me">過來</string>
    <string name="leave_it">走開</string>
    <string name="name_recognition">叫名字</string>
    <string name="walk_on_a_lead">走前面</string>
    <string name="get_back_to_his_place">回到自己的地方</string>
    <string name="consume_food">消耗食物</string>
    <string name="add_reap">增加肌肉</string>
    <string name="insufficient_food">食物不足</string>
    <string name="my_props">我的道具</string>
    <string name="cancle_props">已裝備同類型的道具</string>
    <string name="conguratulations">恭喜</string>
    <string name="input_prop_success">%s已经放入道具</string>
    <string name="input_prop_fail">垃圾已经丢弃</string>
    <string name="price_s">價格：%s</string>
    <string name="price">價格</string>
    <string name="merchant_agreement">協議</string>
    <string name="merchant_agreement_notice_1">How to apply to become a merchant?</string>
    <string name="merchant_agreement_notice_2">Step 1: Prepare business application materials as required</string>
    <string name="merchant_agreement_notice_3">Prepare the following application materials:Email、Mobile phone number、Personal digital asset certificate(pictre)、Digital asset transaction certificate (picture).</string>
    <string name="merchant_agreement_notice_4">Step 2: Submit the application</string>
    <string name="merchant_agreement_notice_5">Complete the merchant certification audit materials that need to be filled in and uploaded. Click Submit for Review.</string>
    <string name="merchant_agreement_notice_6">Step 3: Data Review</string>
    <string name="merchant_agreement_notice_7">We will review your business application information within 3-5 working days, please keep an eye on the review status, which can be viewed on the submission page. After approval, you can advertise in the fiat currency trading area.</string>
    <string name="merchant_agreement_notice_8">Agree to pledge 2000USDT as the merchant\'s security deposit.</string>
    <string name="merchant_agreement_notice_9">Please agree to freeze the deposit.</string>
    <string name="modify_avatar">Modify Avatar</string>
    <string name="type">Type</string>
    <string name="quantity">Quantity</string>
    <string name="time">Time</string>
    <string name="info_collection">1.Do not recharge any SUZU other than Solana to the above landiords ohterwise the assest wills not recoverable\n2.After you rechare to the address you need the confirmation of the whole net fter you rechare to the address you need the confirmation of the whole net\n3.After you rechare to the address you need the confirmation of the whole net fter you rechare to the address you need the confirmation of the whole net.</string>
    <string name="reminder">Reminder:</string>
    <string name="suzu_zol">SUZU_ZOL</string>
    <string name="please_enter_the_address">Please enter the address</string>
    <string name="please_enter_the_quantity">Please enter the quantity</string>
    <string name="address">Address</string>
    <string name="all">ALL</string>
    <string name="password_settings">Password settings</string>
    <string name="enter_the_original_password">Enter the original password</string>
    <string name="original_password">Original password</string>
    <string name="new_password">New password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="enter_the_new_password_again">Enter the new password again</string>
    <string name="pw_limit">The password is 6- digit pure letters, or letters + numbers</string>
    <string name="remaining_to_close_s">Remaining to close：%s</string>
    <string name="waiting_for_buyers_payment">Waiting for buyers payment</string>
    <string name="unpaid">Unpaid</string>
    <string name="limit">Limit</string>
    <string name="currency">Currency</string>
</resources>