<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/llTitle"
        style="@style/TitlePaddingParent"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="@dimen/dimen_30"
            android:layout_height="@dimen/dimen_30"
            android:layout_centerVertical="true"
            android:background="@mipmap/icon_back" />

        <TextView
            style="@style/TextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/password_settings" />

        <ImageView
            android:id="@+id/img_add"
            android:layout_width="@dimen/dimen_30"
            android:layout_height="@dimen/dimen_30"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@mipmap/icon_add"
            android:visibility="gone" />
    </RelativeLayout>


    <com.wallet.walkthedog.custom_view.card.ShadowFrameLayout
        style="@style/def_while_shadow_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/original_password"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@mipmap/bg_input"
                android:hint="@string/enter_the_original_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="13dp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/new_password"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@mipmap/bg_input"
                android:hint="@string/enter_new_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="13dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/confirm_password"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@mipmap/bg_input"
                android:hint="@string/enter_the_new_password_again"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="13dp" />
        </LinearLayout>

    </com.wallet.walkthedog.custom_view.card.ShadowFrameLayout>

    <TextView
        android:textSize="12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/pw_limit" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <com.wallet.walkthedog.custom_view.card.ShadowTextView
        style="@style/defshadow_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:padding="17dp"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:shadowGradientColor="#548FEB,#27408E" />

</LinearLayout>