<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_black_radius_20"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    tools:layout_height="100dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unpaid"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/waiting_for_buyers_payment"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv_time_limit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="#E12828"
        tools:text="@string/remaining_to_close_s" />
</LinearLayout>