<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/llTitle"
        style="@style/TitlePaddingParent"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="@dimen/dimen_30"
            android:layout_height="@dimen/dimen_30"
            android:layout_centerVertical="true"
            android:background="@mipmap/icon_back" />

        <TextView
            style="@style/TextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/merchant_agreement" />

        <ImageView
            android:id="@+id/img_add"
            android:layout_width="@dimen/dimen_30"
            android:layout_height="@dimen/dimen_30"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@mipmap/icon_add"
            android:visibility="gone" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@null">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/dp20"
            android:layout_marginVertical="@dimen/dp20"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_notice_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/merchant_agreement_notice_1"
                android:textColor="@color/color_848484"
                android:textSize="16dp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/txt_notice_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_30"
                android:text="@string/merchant_agreement_notice_2"
                android:textColor="@color/color_848484"
                android:textSize="14dp"
                />

            <TextView
                android:id="@+id/txt_notice_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10"
                android:text="@string/merchant_agreement_notice_3"
                android:textColor="@color/color_848484"
                android:textSize="14dp"
                />

            <TextView
                android:id="@+id/txt_notice_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_30"
                android:text="@string/merchant_agreement_notice_4"
                android:textColor="@color/color_848484"
                android:textSize="14dp"
                />

            <TextView
                android:id="@+id/txt_notice_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10"
                android:text="@string/merchant_agreement_notice_5"
                android:textColor="@color/color_848484"
                android:textSize="14dp"
                />

            <TextView
                android:id="@+id/txt_notice_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_30"
                android:text="@string/merchant_agreement_notice_6"
                android:textColor="@color/color_848484"
                android:textSize="14dp"
                />

            <TextView
                android:id="@+id/txt_notice_7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10"
                android:text="@string/merchant_agreement_notice_7"
                android:textColor="@color/color_848484"
                android:textSize="14dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/dp30"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_select"
                    android:layout_width="@dimen/dimen_24"
                    android:layout_height="@dimen/dimen_24"
                    android:background="@mipmap/icon_unselect_gray"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dimen_16"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_notice_8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/merchant_agreement_notice_8"
                        android:textColor="@color/color_848484"
                        android:textSize="14dp"
                        />

                    <TextView
                        android:id="@+id/txt_notice_9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/merchant_agreement_notice_9"
                        android:textColor="@color/color_848484"
                        android:textSize="12dp"
                        />
                </LinearLayout>


            </LinearLayout>

            <com.wallet.walkthedog.custom_view.card.ShadowTextView
                android:id="@+id/tv_confirm"
                style="@style/defshadow_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_36"
                android:layout_marginTop="@dimen/dimen_30"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/confirm"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

    </ScrollView>


</LinearLayout>

